log
Wed, Mar 19, 2025  8:03:20 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:15:50 PM: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
892a530
Wed, Mar 19, 2025  9:22:27 PM: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
84b4178
Wed, Mar 19, 2025  9:27:11 PM: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
53a68fa
Thu, Mar 20, 2025  6:58:32 PM: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
df3ac78
Thu, Mar 20, 2025  7:06:56 PM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c8c39e5
Thu, Mar 20, 2025  7:08:35 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:63:4: error: "/*" within comment [-Werror=comment]
    /*
     
exercises.c:67:1: error: "/*" within comment [-Werror=comment]
 /*
  
In file included from test.c:6:0:
arraylist.c: In function 'create_list':
arraylist.c:15:34: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
   List* L = (List*)malloc(sizeof(List));
                                  ^~~~
arraylist.c:16:4: error: dereferencing pointer to incomplete type 'List {aka struct List}'
   L->current = 0;
    ^~
test.c: In function 'crea_lista':
test.c:253:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
 }
 ^
test.c:271:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:6:0:
arraylist.c: In function 'first':
arraylist.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:253:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:37:6: error: 'info_msg' defined but not used [-Werror=unused-function]
 void info_msg(char* msg){
      ^~~~~~~~
In file included from test.c:6:0:
arraylist.c:102:5: error: 'get_size' defined but not used [-Werror=unused-function]
 int get_size(List *L) {
     ^~~~~~~~
arraylist.c:89:7: error: 'popCurrent' defined but not used [-Werror=unused-function]
 void* popCurrent(List *L) {
       ^~~~~~~~~~
arraylist.c:80:7: error: 'popBack' defined but not used [-Werror=unused-function]
 void* popBack(List *L) {
       ^~~~~~~
arraylist.c:68:7: error: 'popFront' defined but not used [-Werror=unused-function]
 void* popFront(List *L) {
       ^~~~~~~~
arraylist.c:55:6: error: 'pushCurrent' defined but not used [-Werror=unused-function]
 void pushCurrent(List *L, void *dato) {
      ^~~~~~~~~~~
arraylist.c:37:6: error: 'pushFront' defined but not used [-Werror=unused-function]
 void pushFront(List *L, void *dato) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9326ed8
Thu, Mar 20, 2025  7:09:09 PM: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|4
total_score: 10/70
8e54a70
Thu, Mar 20, 2025  7:09:44 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
934f8af
Thu, Mar 20, 2025  7:13:34 PM: 
 exercises.c | 17 +++++------------
 1 file changed, 5 insertions(+), 12 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
8bd94f3
Thu, Mar 20, 2025  7:14:00 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
90149c4
Thu, Mar 20, 2025  7:14:18 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6dec032
Thu, Mar 20, 2025  7:14:35 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
b523e32
Thu, Mar 20, 2025  7:15:10 PM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:54:16: error: 'L' undeclared (first use in this function)
       pushBack(L, elementos);
                ^
exercises.c:54:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b51ee00
Thu, Mar 20, 2025  7:21:03 PM: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
a6e5eb2
Thu, Mar 20, 2025  7:21:56 PM: 
 exercises.c | 18 +++++-------------
 1 file changed, 5 insertions(+), 13 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
175c255
Thu, Mar 20, 2025  7:23:35 PM: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
7b0f775
Thu, Mar 20, 2025  7:25:38 PM: 
 exercises.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
189d1d7
Thu, Mar 20, 2025  7:26:50 PM: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
8d6547a
Thu, Mar 20, 2025  7:28:24 PM: 
 exercises.c | 37 ++++++++++---------------------------
 1 file changed, 10 insertions(+), 27 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
434ba8b
Thu, Mar 20, 2025  7:29:35 PM: 
 exercises.c | 22 ----------------------
 1 file changed, 22 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
bbfe397
Thu, Mar 20, 2025  7:42:19 PM: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
8b7d2f2
Thu, Mar 20, 2025  7:42:58 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|3
total_score: 20/70
ab88457
Thu, Mar 20, 2025  7:43:30 PM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4740b37
Thu, Mar 20, 2025  7:47:18 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
b5a470d
Thu, Mar 20, 2025  7:49:01 PM: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  4|1
total_score: 50/70
62a9039
